# z80-llm

./: README.md
Hardware/KiCad/: Z80_llm.kicad_pcb  Z80_llm.kicad_prl  Z80_llm.kicad_pro  Z80_llm.kicad_sch  fp-info-cache
Hardware/PLD/: ctrl.jed  ctrl.pld
Z80/: Makefile  ata.c  ata.h  boot.c  bootloader.asm  crc16.c  crc32c.c  crc32c.h  defines.h  ext4.c  ext4.h  llm.c  llm.h  pragma.inc  romtool.c  tokenizer.c  tokenizer.h
c_pgm/: Makefile  crc16.h  main.c  tokenizer.c  tokenizer.h
libtorch_llm/: CMakeLists.txt  llm-app.cpp  pre-tokenize.cpp  tokenizer.cpp
libtorch_llm/data/: convert_dict.js  prepare_vocab.sh  splitter.js
